; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_i2c_uint64_int.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_i2c_uint64_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i2c_uint64_int(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [4 x i8], align 1
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = getelementptr inbounds [4 x i8], [4 x i8]* %7, i64 0, i64 0
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @asn1_put_uint64(i8* %9, i32 %10)
  store i64 %11, i64* %8, align 8
  %12 = getelementptr inbounds [4 x i8], [4 x i8]* %7, i64 0, i64 0
  %13 = load i64, i64* %8, align 8
  %14 = getelementptr inbounds i8, i8* %12, i64 %13
  %15 = load i64, i64* %8, align 8
  %16 = sub i64 4, %15
  %17 = trunc i64 %16 to i32
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @i2c_ibuf(i8* %14, i32 %17, i32 %18, i8** %4)
  ret i32 %19
}

declare dso_local i64 @asn1_put_uint64(i8*, i32) #1

declare dso_local i32 @i2c_ibuf(i8*, i32, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
